# awsm-renderer

./: .claude-msaa-debug.md  .env.example  .gitignore  .mcp.json  Cargo.toml  README.md  Taskfile.yml  list  package-lock.json  package.json
crates/curves/: Cargo.toml  README.md
crates/curves/src/: curve1.rs  curve3.rs  helpers.rs  lib.rs
crates/frontend/material-editor/: Cargo.toml  index.html
crates/frontend/material-editor/src/: app.rs  host.rs  main.rs  recompile.rs  state.rs
crates/frontend/material-editor/src/panes/: buffer_converter.rs  compile_modal.rs  contract.rs  deep_link_banner.rs  definition.rs  errors.rs  mod.rs  preview.rs  wgsl_editor.rs
crates/frontend/scene-editor/: Cargo.toml  index.html
crates/frontend/scene-editor/src/: actions.rs  canvas.rs  collider_wireframe.rs  compile_modal.rs  config.rs  context.rs  loading_modal.rs  main.rs  prelude.rs  properties.rs  renderer_bridge.rs  scene.rs  state.rs  tree.rs
crates/frontend/scene-editor/src/actions/: camera.rs  history.rs  insert.rs  measurement.rs  object.rs  project.rs  view.rs
crates/frontend/scene-editor/src/collider_wireframe/: render.rs
crates/frontend/scene-editor/src/header/: assets.rs  editor.rs  environment.rs  insert.rs  mod.rs  shadows_config.rs  top.rs
crates/frontend/scene-editor/src/properties/: custom_materials_pane.rs  history_input.rs  prefab.rs
crates/frontend/scene-editor/src/renderer_bridge/: asset_cache.rs  camera_driver.rs  dynamic_material_bridge.rs  env_sync.rs  gizmo.rs  instance_batcher.rs  material_cache.rs  mesh_cache.rs  node_sync.rs  particles_sync.rs  point_handle_sync.rs  procedural_sync.rs  shadows_sync.rs  texture_cache.rs
crates/frontend/scene-editor/src/scene/: node.rs  snapshot.rs
crates/frontend/scene-editor/src/state/: project.rs
crates/frontend/scene-editor/src/tree/: icons.rs  rows.rs
crates/geometry/: Cargo.toml  README.md
crates/geometry/src/: frustum.rs  ray.rs
crates/materials/: Cargo.toml  README.md
crates/materials/src/: alpha_mode.rs  dynamic.rs  dynamic_layout.rs  flipbook.rs  lib.rs  pbr.rs  registry.rs  scanline.rs  shader.rs  shader_id.rs  shader_includes.rs  texture.rs  texture_context.rs  toon.rs  unlit.rs  writer.rs
crates/materials/src/wgsl/: flipbook_material.wgsl  scanline_material.wgsl
crates/materials/src/wgsl/pbr/: pbr_material_color.wgsl
crates/meshgen/: Cargo.toml  README.md
crates/meshgen/src/: lib.rs  mesh_data.rs  primitives.rs  procedural_texture.rs  sweep.rs
crates/particles/: Cargo.toml
crates/particles/src/: emitter.rs  simulator.rs  spawn.rs
crates/renderer/: Cargo.toml  README.md  askama.toml
crates/renderer-gltf/: Cargo.toml
crates/renderer-gltf/src/: aabb.rs  buffers.rs  data.rs  error.rs  lib.rs  loader.rs  populate.rs  worker_job.rs
crates/renderer-gltf/src/buffers/: accessor.rs  attributes.rs  index.rs  mesh.rs  morph.rs  skin.rs  tangents.rs  triangle.rs
crates/renderer-gltf/src/buffers/mesh/: transparency.rs  visibility.rs
crates/renderer-gltf/src/populate/: lights.rs  material.rs  mesh.rs  skin.rs  transforms.rs
crates/renderer/examples/: dynamic_material.rs
crates/renderer/src/: anti_alias.rs  bind_group_layout.rs  bind_groups.rs  camera.rs  coverage.rs  environment.rs  error.rs  features.rs  instances.rs  lib.rs  lights.rs  materials.rs  meshes.rs  opaque_mipgen.rs  optimization_policy.rs  picker.rs  post_process.rs  profile.rs  raw_mesh.rs  render.rs  render_passes.rs  render_textures.rs  renderable.rs  renderer.rs  shaders.rs  textures.rs  transforms.rs  update.rs  web_global.rs
crates/renderer/src/buffer/: dynamic_storage.rs  helpers.rs  mapped_staging_ring.rs  mapped_uploader.rs  mod.rs  staging_ring.rs
crates/renderer/src/decals/: api.rs  data.rs  gpu.rs  mod.rs
crates/renderer/src/dynamic_materials/: error.rs  extras_pool.rs  mod.rs  registry.rs
crates/renderer/src/frame_globals/: globals.rs  mod.rs  snapshot.rs
crates/renderer/src/gltf/: error.rs
crates/renderer/src/gltf/populate/: mesh.rs
crates/renderer/src/light_buckets/: buckets.rs  gpu.rs  mod.rs
crates/renderer/src/lights/: ibl.rs
crates/renderer/src/materials/: toon.rs
crates/renderer/src/meshes/: error.rs  mesh.rs  meta.rs  morphs.rs  skin_lod.rs  skins.rs
crates/renderer/src/meshes/meta/: geometry_meta.rs  material_meta.rs
crates/renderer/src/pipeline_scheduler/: launch.rs  mod.rs  scheduler.rs  types.rs
crates/renderer/src/pipelines/: compute_pipeline.rs  render_pipeline.rs
crates/renderer/src/render_passes/: shader_cache_key.rs  shader_template.rs
crates/renderer/src/render_passes/coverage/: bind_group.rs  buffers.rs  mod.rs  pipeline.rs  (+1 more)
crates/renderer/src/scene_spatial/: frustum_selector.rs  index.rs  mod.rs  tests.rs
crates/renderer/src/shadows/: api.rs  cascade.rs  config.rs  consts.rs  error.rs  evsm.rs  helpers.rs  importance.rs  light_shadow.rs  mod.rs  quality_tier.rs  record.rs  render_pass.rs  schema_convert.rs  state.rs
crates/renderer/src/workers/: blob.rs  entry.rs  mod.rs  pool.rs
crates/scene-schema/: Cargo.toml
crates/scene-schema/examples/: generate_tuning_scenes.rs
crates/scene-schema/src/: assets.rs  curve.rs  decal.rs  dynamic_material.rs  instances.rs  lib.rs  light.rs  material.rs  model.rs  particle.rs  project.rs  sprite.rs  transform.rs  tree.rs
crates/scene-schema/tests/: material_roundtrip.rs  mesh_roundtrip.rs
examples/bundle-player/: Cargo.toml  README.md  Trunk.toml  index.html
examples/bundle-player/src/: lib.rs
examples/multithreaded/: Cargo.toml  README.md  Trunk.toml  index.html  rust-toolchain.toml
examples/multithreaded/scene_fixture/: scene.toml
examples/multithreaded/src/: arena_test.rs  bootstrap.rs  churn_demo.rs  crowd_demo.rs  input_demo.rs  lib.rs  lights_demo.rs  motion_demo.rs  protocol.rs  remote_demo.rs  render_demo.rs  scene_demo.rs  skin_demo.rs  smoke.rs  viewport.rs
examples/player-tests/: Cargo.toml  README.md  Trunk.toml  index.html
examples/player-tests/src/: checks.rs  harness.rs  lib.rs  report.rs
examples/render-worker/: Cargo.toml
examples/render-worker/src/: lib.rs  worker.rs
(+552 files in other folders)
