[workspace]
members = [
    "crates/curves",
    "crates/editor",
    "crates/geometry",
    "crates/materials",
    "crates/meshgen",
    "crates/particles",
    "crates/renderer",
    "crates/renderer-core",
    "crates/renderer-gltf",
    "crates/scene-schema",
    "crates/web-shared",
    "crates/frontend/model-tests",
]
resolver = "2"

[workspace.package]
description = "awsm renderer"
edition = "2021"
version = "0.1.7"
license = "MIT"
authors = ["David Komer"]
rust-version = "1.80.0"
repository = "https://github.com/dakom/awsm-renderer"
homepage = "https://dakom.github.io/awsm-renderer/"

### Patches

# dominator 0.5.38 on crates.io is incompatible with web_sys_unstable_apis (mouse/scroll types became f64).
# Fix landed on master (commit 25597cd) but isn't published yet.
[patch.crates-io]
dominator = { git = "https://github.com/Pauan/rust-dominator", rev = "25597cd" }

### Profiles

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."awsm-renderer"]
opt-level = 1

[profile.dev.package."awsm-renderer-core"]
opt-level = 1

[profile.dev.package."awsm-model-tests"]
opt-level = 1

### Dependencies

[workspace.dependencies]

# Misc
cfg-if = "1.0.4"
ordered-float = "5.3.0"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Async
futures = "0.3.32"

# Data formats
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
const-hex = "1.18.1"

# Logging
tracing-subscriber = {version ="0.3.23", features = ["env-filter"]}
tracing = "0.1.44"
tracing-panic = "0.1.2"

# Collections
slotmap = {version = "1.1.1", features = ["serde"]}
indexmap = "2.11.4"

# Helper utils
strum = { version = "0.28.0", features = ["derive"] }

# Template
askama = {version = "0.15.6", default-features = false, features = ["config", "derive", "std"]}

# Math
glam = {version = "0.32.1"}
half = "2.4.1"
bevy_mikktspace = "0.15.3"

# Media
# https://github.com/gltf-rs/gltf/issues/465
# Note: clearcoat/sheen features require git version until gltf releases them.
# Those features are enabled in frontend/Cargo.toml for local dev only.
gltf = {version = "1.4.1", git = "https://github.com/gltf-rs/gltf.git", features = [
    "extensions",
    "KHR_lights_punctual",
    "KHR_texture_transform",
    "KHR_materials_emissive_strength",
    "KHR_materials_unlit",
    "KHR_materials_specular",
    "KHR_materials_ior",
    "KHR_materials_transmission",
    "KHR_materials_volume",
]}
exr = "1.74.0"
binpack2d = "1.0.1"
image = {version = "0.25.6", default-features = false, features = ["png"]}
ktx2 = "0.5.0"

# Browser bindings and helpers
wasm-bindgen = "0.2.118"
js-sys = "0.3.95"
wasm-bindgen-futures = "0.4.68"
gloo-net = {version = "0.6.0", features = ["http"]}
serde-wasm-bindgen = "0.6.5"

[workspace.dependencies.web-sys]
version = "0.3.95"
features = [
    "console",
    "DomRect",
    "Location",
    "MouseEvent",
    "PointerEvent",
    "Response",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "ImageBitmap",
    "ImageBitmapOptions",
    "ImageData",
    "PremultiplyAlpha",
    "ColorSpaceConversion",
    "ImageOrientation",
    "ResizeQuality",
    "FileList",
    "File",
    "Window",
    "BlobPropertyBag",
    "Url",
    "UrlSearchParams",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Storage",
    "Navigator",
    "HtmlSelectElement",
    "Performance",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "MessageEvent",
    "StyleSheet",
    "CssStyleDeclaration",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuCanvasContext",
    "GpuTextureFormat",
    "GpuCanvasConfiguration",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuVertexState",
    "GpuVertexBufferLayout",
    "GpuVertexAttribute",
    "GpuVertexFormat",
    "GpuVertexStepMode",
    "GpuFragmentState",
    "GpuMultisampleState",
    "GpuDepthStencilState",
    "GpuCompareFunction",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuCullMode",
    "GpuFrontFace",
    "GpuIndexFormat",
    "GpuTextureFormat",
    "GpuStencilFaceState",
    "GpuStencilOperation",
    "GpuColorTargetState",
    "GpuBlendState",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuPipelineError",
    "GpuPipelineErrorReason",
    "GpuCommandEncoder",
    "GpuCommandBuffer",
    "GpuCommandEncoderDescriptor",
    "GpuTextureAspect",
    "GpuQuerySet",
    "GpuQuerySetDescriptor",
    "GpuQueryType",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBufferBindingLayout",
    "GpuExternalTextureBindingLayout",
    "GpuSamplerBindingLayout",
    "GpuStorageTextureBindingLayout",
    "GpuTextureBindingLayout",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBufferBindingType",
    "GpuSamplerBindingType",
    "GpuStorageTextureAccess",
    "GpuTextureViewDimension",
    "GpuTextureSampleType",
    "GpuBufferBinding",
    "GpuBuffer",
    "GpuBufferMapState",
    "GpuExternalTexture",
    "GpuExternalTextureDescriptor",
    "GpuCopyExternalImageSourceInfo",
    "GpuCopyExternalImageDestInfo",
    "HtmlVideoElement",
    "VideoFrame",
    "GpuSamplerDescriptor",
    "GpuSampler",
    "GpuAddressMode",
    "GpuFilterMode",
    "GpuMipmapFilterMode",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureDescriptor",
    "GpuTexture",
    "GpuTextureDimension",
    "GpuQueue",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuProgrammableStage",
    "GpuComputePassDescriptor",
    "GpuComputePassTimestampWrites",
    "GpuComputePassEncoder",
    "GpuRenderPassDescriptor",
    "GpuRenderPassTimestampWrites",
    "GpuRenderPassEncoder",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDepthStencilAttachment",
    "GpuLoadOp",
    "GpuStoreOp",
    "GpuColorDict",
    "GpuExtent3dDict",
    "GpuOrigin3dDict",
    "GpuTexelCopyBufferInfo",
    "GpuTexelCopyTextureInfo",
    "GpuTexelCopyBufferLayout",
    "GpuBufferDescriptor",
    "GpuCompilationInfo",
    "GpuCompilationMessage",
    "GpuCompilationMessageType",
    "gpu_buffer_usage",
    "gpu_texture_usage",
    "gpu_shader_stage",
    "GpuCanvasAlphaMode",
    "GpuCanvasToneMappingMode",
    "GpuCanvasToneMapping",
    "GpuSupportedLimits",
    "GpuDeviceDescriptor",
    "gpu_color_write",
    "gpu_map_mode",
]
