[workspace]
members = [
    "packages/crates/curves",
    "packages/crates/geometry",
    "packages/crates/materials",
    "packages/crates/meshgen",
    "packages/crates/particles",
    "packages/crates/renderer",
    "packages/crates/renderer-core",
    "packages/crates/renderer-gltf",
    "packages/crates/scene-schema",
    "packages/crates/editor-protocol",
    "packages/frontend/web-shared",
    "packages/frontend/editor",
    "packages/frontend/model-tests",
    "packages/examples/render-worker",
    "packages/debugging",
    "packages/mcp",
]
resolver = "2"

[workspace.package]
description = "awsm renderer"
edition = "2021"
version = "0.2.0"
license = "MIT"
authors = ["David Komer"]
# 1.85 floor: rmcp 1.x (the MCP server SDK) is edition-2024, which requires
# Rust 1.85+. Keeping the MSRV here lets dependency specs stay simple (`rmcp = "1"`)
# instead of pinning around the resolver.
rust-version = "1.85.0"
repository = "https://github.com/dakom/awsm-renderer"
homepage = "https://dakom.github.io/awsm-renderer/"

### Patches

# dominator 0.5.38 on crates.io is incompatible with web_sys_unstable_apis (mouse/scroll types became f64).
# Fix landed on master (commit 25597cd) but isn't published yet.
[patch.crates-io]
dominator = { git = "https://github.com/Pauan/rust-dominator", rev = "25597cd" }

### Profiles

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."awsm-renderer"]
opt-level = 1

[profile.dev.package."awsm-renderer-core"]
opt-level = 1

[profile.dev.package."awsm-model-tests"]
opt-level = 1

[profile.dev.package."awsm-editor"]
opt-level = 1

### Dependencies

[workspace.dependencies]

# Internal awsm-* crates. Version is kept in lockstep with
# `workspace.package.version` so the published crates carry concrete
# version requirements on each other (crates.io rejects path-only deps).
# Bump this block together with the version above on every release.
awsm-curves = { path = "packages/crates/curves", version = "0.2.0" }
awsm-geometry = { path = "packages/crates/geometry", version = "0.2.0" }
awsm-scene-schema = { path = "packages/crates/scene-schema", version = "0.2.0" }
awsm-editor-protocol = { path = "packages/crates/editor-protocol", version = "0.2.0" }
awsm-renderer-core = { path = "packages/crates/renderer-core", version = "0.2.0" }
awsm-meshgen = { path = "packages/crates/meshgen", version = "0.2.0" }
awsm-particles = { path = "packages/crates/particles", version = "0.2.0" }
awsm-materials = { path = "packages/crates/materials", version = "0.2.0" }
awsm-renderer = { path = "packages/crates/renderer", version = "0.2.0" }
awsm-renderer-gltf = { path = "packages/crates/renderer-gltf", version = "0.2.0" }
# Frontend-only (not published); workspace dep keeps consumers path-agnostic.
awsm-web-shared = { path = "packages/frontend/web-shared", version = "0.2.0" }

# Misc
cfg-if = "1.0.4"
ordered-float = "5.3.0"

# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Async
futures = "0.3.32"

# Data formats
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
const-hex = "1.18.1"

# Logging
tracing-subscriber = {version ="0.3.23", features = ["env-filter"]}
tracing = "0.1.44"
tracing-panic = "0.1.2"

# Collections
slotmap = {version = "1.1.1", features = ["serde"]}
indexmap = "2.11.4"

# Helper utils
strum = { version = "0.28.0", features = ["derive"] }

# Template
askama = {version = "0.15.6", default-features = false, features = ["config", "derive", "std"]}

# Math
glam = {version = "0.32.1"}
half = "2.4.1"
bevy_mikktspace = "0.15.3"

# Debugging - only needed for `android_chrome_check`
tokio = {version = "1.52.3", features = ["full"]}
tokio-tungstenite = "0.29.0"
regex = "1.12.3"
futures-util = "0.3.32"
reqwest = {version = "0.13.4", features = ["json"]}


# Media
# Released crates.io gltf (no git dep — required for publishing awsm-renderer).
# Extensions the gltf typed accessors don't cover (clearcoat/sheen, and the
# normal/occlusion KHR_texture_transform) are read from the raw extensions
# JSON in `renderer-gltf` instead. See gltf-rs/gltf#465.
gltf = {version = "1.4.1", features = [
    "extensions",
    "KHR_lights_punctual",
    "KHR_texture_transform",
    "KHR_materials_emissive_strength",
    "KHR_materials_unlit",
    "KHR_materials_specular",
    "KHR_materials_ior",
    "KHR_materials_transmission",
    "KHR_materials_volume",
]}
exr = "1.74.0"
binpack2d = "1.0.1"
image = {version = "0.25.6", default-features = false, features = ["png"]}
ktx2 = "0.5.0"

# Browser bindings and helpers
wasm-bindgen = "0.2.118"
js-sys = "0.3.95"
wasm-bindgen-futures = "0.4.68"
gloo-net = {version = "0.6.0", features = ["http"]}
serde-wasm-bindgen = "0.6.5"

[workspace.dependencies.web-sys]
version = "0.3.95"
features = [
    "console",
    "DomRect",
    "Location",
    "MouseEvent",
    "PointerEvent",
    "Response",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "ImageBitmap",
    "ImageBitmapOptions",
    "ImageData",
    "PremultiplyAlpha",
    "ColorSpaceConversion",
    "ImageOrientation",
    "ResizeQuality",
    "FileList",
    "File",
    "FileReader",
    "HtmlTextAreaElement",
    "Window",
    "BlobPropertyBag",
    "Url",
    "UrlSearchParams",
    "MediaQueryList",
    "MediaQueryListEvent",
    "Storage",
    "Navigator",
    "HtmlSelectElement",
    "Performance",
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "OffscreenCanvasRenderingContext2d",
    "MessageEvent",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "WorkerNavigator",
    "DedicatedWorkerGlobalScope",
    "Blob",
    "StyleSheet",
    "CssStyleDeclaration",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuCanvasContext",
    "GpuTextureFormat",
    "GpuCanvasConfiguration",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuVertexState",
    "GpuVertexBufferLayout",
    "GpuVertexAttribute",
    "GpuVertexFormat",
    "GpuVertexStepMode",
    "GpuFragmentState",
    "GpuMultisampleState",
    "GpuDepthStencilState",
    "GpuCompareFunction",
    "GpuPrimitiveState",
    "GpuPrimitiveTopology",
    "GpuCullMode",
    "GpuFrontFace",
    "GpuIndexFormat",
    "GpuTextureFormat",
    "GpuStencilFaceState",
    "GpuStencilOperation",
    "GpuColorTargetState",
    "GpuBlendState",
    "GpuBlendComponent",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuPipelineError",
    "GpuPipelineErrorReason",
    "GpuCommandEncoder",
    "GpuCommandBuffer",
    "GpuCommandEncoderDescriptor",
    "GpuTextureAspect",
    "GpuQuerySet",
    "GpuQuerySetDescriptor",
    "GpuQueryType",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutDescriptor",
    "GpuBindGroupLayoutEntry",
    "GpuBufferBindingLayout",
    "GpuExternalTextureBindingLayout",
    "GpuSamplerBindingLayout",
    "GpuStorageTextureBindingLayout",
    "GpuTextureBindingLayout",
    "GpuBindGroup",
    "GpuBindGroupDescriptor",
    "GpuBindGroupEntry",
    "GpuBufferBindingType",
    "GpuSamplerBindingType",
    "GpuStorageTextureAccess",
    "GpuTextureViewDimension",
    "GpuTextureSampleType",
    "GpuBufferBinding",
    "GpuBuffer",
    "GpuBufferMapState",
    "GpuExternalTexture",
    "GpuExternalTextureDescriptor",
    "GpuCopyExternalImageSourceInfo",
    "GpuCopyExternalImageDestInfo",
    "HtmlVideoElement",
    "VideoFrame",
    "GpuSamplerDescriptor",
    "GpuSampler",
    "GpuAddressMode",
    "GpuFilterMode",
    "GpuMipmapFilterMode",
    "GpuTextureView",
    "GpuTextureViewDescriptor",
    "GpuTextureDescriptor",
    "GpuTexture",
    "GpuTextureDimension",
    "GpuQueue",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuProgrammableStage",
    "GpuComputePassDescriptor",
    "GpuComputePassTimestampWrites",
    "GpuComputePassEncoder",
    "GpuRenderPassDescriptor",
    "GpuRenderPassTimestampWrites",
    "GpuRenderPassEncoder",
    "GpuRenderPassColorAttachment",
    "GpuRenderPassDepthStencilAttachment",
    "GpuLoadOp",
    "GpuStoreOp",
    "GpuColorDict",
    "GpuExtent3dDict",
    "GpuOrigin3dDict",
    "GpuTexelCopyBufferInfo",
    "GpuTexelCopyTextureInfo",
    "GpuTexelCopyBufferLayout",
    "GpuBufferDescriptor",
    "GpuCompilationInfo",
    "GpuCompilationMessage",
    "GpuCompilationMessageType",
    "gpu_buffer_usage",
    "gpu_texture_usage",
    "gpu_shader_stage",
    "GpuCanvasAlphaMode",
    "GpuCanvasToneMappingMode",
    "GpuCanvasToneMapping",
    "GpuSupportedLimits",
    "GpuSupportedFeatures",
    "GpuDeviceDescriptor",
    "GpuUncapturedErrorEvent",
    "GpuError",
    "GpuValidationError",
    "GpuInternalError",
    "GpuOutOfMemoryError",
    "gpu_color_write",
    "gpu_map_mode",
]
