[package]
name = "awsm-curves"
description = "Pure CPU curve math (3D paths + 1D parameter curves + curve-aware geometry helpers)"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
glam = {workspace = true}
serde = {workspace = true, optional = true}
