[package]
name = "awsm-geometry"
description = "Pure CPU non-curve geometry utilities (AABB, ray/triangle, frustum)"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
serde = ["dep:serde"]

[dependencies]
glam = {workspace = true}
serde = {workspace = true, optional = true}
