[package]
name = "awsm-particles"
description = "Pure CPU particle simulator (struct-of-arrays, GPU-shape compatible)"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = []
serde = ["dep:serde", "awsm-curves/serde"]

[dependencies]
awsm-curves = { path = "../curves" }
awsm-geometry = { path = "../geometry" }
glam = {workspace = true}
serde = {workspace = true, optional = true}
