[package]
name = "awsm-renderer-gltf"
description = "glTF ingestion for awsm-renderer"
readme = "../../README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
rustc-args = ["--cfg=web_sys_unstable_apis"]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]

[features]
default = []
# Optional glTF material extensions. `gltf`'s `KHR_materials_clearcoat` /
# `KHR_materials_sheen` are unreleased on crates.io, so they're only
# available with the git dependency (see workspace Cargo.toml).
clearcoat = []
sheen = []

[dependencies]
awsm-renderer = { path = "../renderer" }
awsm-renderer-core = { path = "../renderer-core", features = ["texture-pool", "image"] }
awsm-materials = { path = "../materials" }
gltf = { workspace = true }
gloo-net = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
slotmap = { workspace = true }
glam = { workspace = true }
strum = { workspace = true }
ordered-float = { workspace = true }
indexmap = { workspace = true }
bevy_mikktspace = { workspace = true }
