[package]
name = "awsm-renderer"
description = "awsm-renderer"
readme = "../../README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
features = ["animation", "ktx", "serde", "mega-texture", "exr", "texture-export"]
# WebGPU APIs in web-sys require this cfg flag
rustc-args = ["--cfg=web_sys_unstable_apis"]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]

[features]
default = ["animation"]
all = ["animation", "awsm-renderer-core/all", "scene-schema"]
# specifics
animation = []
# Optional features to enable optional parts of awsm-renderer-core
ktx = ["awsm-renderer-core/ktx"]
serde = ["dep:serde", "awsm-renderer-core/serde"]
mega-texture = ["awsm-renderer-core/mega-texture"]
exr = ["awsm-renderer-core/exr"]
texture-export = ["awsm-renderer-core/texture-export"]
# Pulls in `awsm-scene-schema` and provides `From<scene_schema::*>`
# implementations for the renderer's runtime types (`ShadowsConfig`,
# `LightShadowParams`, `MeshShadowFlags`, etc.). Off by default so the
# renderer stays scene-schema-free for non-editor consumers; on for
# players that load `EditorProject` bundles and want one-call conversion.
scene-schema = ["dep:awsm-scene-schema"]

[dependencies]
awsm-renderer-core = { version = "0.1.3", path = "../renderer-core", features = ["texture-pool"] }
awsm-materials = { path = "../materials" }
awsm-scene-schema = { path = "../scene-schema", optional = true }
web-sys = {workspace = true}
wasm-bindgen = {workspace = true}
tracing = {workspace = true}
thiserror = {workspace = true}
anyhow = {workspace = true}
futures = {workspace = true}
slotmap = {workspace = true}
glam = {workspace = true}
askama = {workspace = true}
strum = {workspace = true}
ordered-float = {workspace = true}
indexmap = { workspace = true}
bevy_mikktspace = { workspace = true}
serde = { workspace = true, optional = true}
