[package]
name = "awsm-renderer-bundle-player-example"
publish = false # test harness, not released to crates.io
description = "bundle-player: a minimal shipped-player-shaped page that loads ONE exported test-scene bundle (examples/test-scenes/<scene>/bundle, served on :9084) through the real player path and renders it through an AUTHORED scene camera — the visual-regression tier for players (goldens per camera)."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
rustc-args = ["--cfg=web_sys_unstable_apis"]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
awsm-renderer = { workspace = true }
awsm-renderer-codec-basis = { workspace = true }
awsm-renderer-core = { workspace = true }
awsm-renderer-scene = { workspace = true }
# `http` pulls in `HttpAssets` — the ready-made bundle-over-HTTP asset source a
# shipped web player uses; this page consumes bundles exactly that way.
awsm-renderer-scene-loader = { workspace = true, features = ["http"] }
glam = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-net = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-web = "0.1.3"
tracing-subscriber = { workspace = true }
