[package]
name = "awsm-multithreaded-example"
publish = false # reference consumer, not released to crates.io
description = "Standalone multithreaded reference app for awsm-renderer (render worker + physics worker + shared-memory sim state). Built with the nightly threaded profile (+atomics,+bulk-memory + build-std)."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
rustc-args = ["--cfg=web_sys_unstable_apis"]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
awsm-renderer = { workspace = true }
awsm-renderer-core = { workspace = true }
awsm-renderer-gltf = { workspace = true }
awsm-scene = { workspace = true }
awsm-scene-loader = { workspace = true }
awsm-materials = { workspace = true }
awsm-meshgen = { workspace = true }
gloo-net = { workspace = true }
glam = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
tracing = { workspace = true }
tracing-web = "0.1.3"
tracing-subscriber = { workspace = true }
