[package]
name = "awsm-renderer-player-tests-example"
publish = false # test harness, not released to crates.io
description = "Player-runtime test harness (docs/plans/007): loads the baked test-scene bundles (examples/test-scenes/<scene>/bundle, served on :9084) through the player consumption path (scene-loader load_scene_for_player) and prints one machine-readable PLAYER-TEST line per check to the browser console."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
rustc-args = ["--cfg=web_sys_unstable_apis"]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
awsm-renderer = { workspace = true }
awsm-renderer-core = { workspace = true }
awsm-renderer-scene = { workspace = true }
# `http` pulls in `HttpAssets` — the ready-made bundle-over-HTTP asset source a
# shipped web player uses; this harness consumes the bundles exactly that way.
awsm-renderer-scene-loader = { workspace = true, features = ["http"] }
glam = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo-net = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-web = "0.1.3"
tracing-subscriber = { workspace = true }
