[package]
name = "awsm-render-worker-example"
publish = false  # example consumer, not released to crates.io
description = "Phase 4.4 OffscreenCanvas-in-worker reference consumer for awsm-renderer."
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
rustc-args = ["--cfg=web_sys_unstable_apis"]
rustdoc-args = ["--cfg=web_sys_unstable_apis"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
awsm-renderer = { workspace = true }
awsm-renderer-core = { workspace = true }
awsm-materials = { workspace = true }
awsm-meshgen = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
tracing = { workspace = true }
tracing-web = "0.1.3"
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
glam = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
